# yolov8-demo

./: .gitignore  README.md  copy_MNN.sh
opencv-4.8.0_static_gcc5.4.0/include/opencv4/opencv2/: cvconfig.h
opencv-4.8.0_static_gcc5.4.0/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
test/: CMakeLists.txt  mult_thread_test.cpp
test/yolov8/: CMakeLists.txt  yolov8_demo.cpp  yolov8_demo.h
